--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 ****************************************/
 
 #header {
-    background: url('../img/header_background.jpg') no-repeat top center fixed;
+    background: url('../img/bg.jpg') no-repeat top center fixed;
     background-size: cover;
 }
 
