--- a/css/s2.css
+++ b/css/s2.css
@@ -8,11 +8,9 @@
 }
 
 .s2 > h1 {
-    color: white;
 }
 
 .s2 > h3 {
-    color: white;
     text-align: center;
     margin-top: 0;
     margin-bottom: 20px;
@@ -44,6 +42,29 @@
     right: 10.5%;
     cursor: pointer;
     font-size: 0;
+}
+
+.s2 .tuto-on {
+    border: 2px solid red;
+    border-radius: 8px;
+}
+
+.s2 .leftPanel {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 34.2%;
+    z-index: 2;
+}
+
+.s2 .rightPanel {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 65.8%;
+    z-index: 2;
 }
 
 .s2 .nav a {
@@ -94,9 +115,15 @@
 
 .s2 .desc {
     position: relative;
-    top: -50%;
-    left: 5%;
+    padding: 15px;
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
+    color: white;
     display: none;
+}
+
+.s2 .desc blockquote {
+    margin-bottom: 0;
 }
 
 .s2 .desc.current {
